# OOPLabs

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: is_valid.h
lab1/src/: is_valid.cpp
lab1/test/: test01.cpp
